Fix-up layout problems and refactor
Also, make the game-of-life canvas resize itself when the window is
resized.

--- a/css/main.scss
+++ b/css/main.scss
@@ -23,13 +23,16 @@ $total-width: 100%;
 
 body {
   font-family: Helvetica-Neue, Helvetica, OpenSans, Arial, Sans-Serif;
+  margin: 0;
+  margin-top: 10px;
+  padding: 0;
 }
 
 .wrapper {
   max-width: 960px;
   margin: 0 auto;
-  padding-right: 13px;
-  overflow: hidden;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 a {
@@ -182,7 +185,11 @@ h4 {
   }
 }
 
-@media screen and (max-width: 620px) {
+@media screen and (max-width: 630px) {
+  .wrapper {
+    margin: 0;
+  }
+
   .projects {
     @include column(12);
   }
@@ -193,5 +200,7 @@ h4 {
 
   .projects .items .item {
     max-width: 100%;
+    margin: 0;
+    margin-bottom: 0.6em;
   }
 }
